# GwenBotV3

./: PRIVACY.md  README.md  pylintrc  pyproject.toml
src/: logger.py  main.py  request.py
src/Bot/: app.py  exceptions.py  models.py  winrate_fetcher.py
src/Bot/Cogs/: commands_cog.py  deepseek_cog.py  dm_cog.py  gwensub_cog.py  leaderboard_cog.py  listener_cog.py  owner_cog.py  winrate_cog.py
src/Config/: config.py  help_message.py
src/Database/: database.py  database_connector.py  exceptions.py  models.py
src/Database/Handlers/: question_handler.py  quote_handler.py  server_handler.py  sub_handler.py  table_handler.py  user_handler.py
src/gwenbotv3/: __init__.py  main.py
src/gwenbotv3/bot/: __init__.py  app.py  exceptions.py  winrate_fetcher.py
src/gwenbotv3/bot/cogs/: __init__.py  commands_cog.py  deepseek_cog.py  dm_cog.py  gwensub_cog.py  help_cog.py  leaderboard_cog.py  listener_cog.py  moderation_cog.py  owner_cog.py  privacy_cog.py  winrate_cog.py
src/gwenbotv3/config/: __init__.py  help_message.py
src/gwenbotv3/database/: __init__.py  get_context.py
src/gwenbotv3/database/_models/: __init__.py  database_connector.py  exceptions.py  models.py
src/gwenbotv3/database/handlers/: __init__.py  db_handler.py  gwenseek_handler.py  gwensub_handler.py  server_handler.py  symbol_handler.py  user_handler.py
src/gwenbotv3/database/handlers/sql_files/: change.sql  pseudonymise.sql  tables.sql  triggers.sql
src/gwenbotv3/loggers/: init_logging.py  logger_setup.py
src/gwenbotv3/utils/: __init__.py  get_user_module.py  logger.py  request.py
